Bug 1055933 - Fix Imagemaps Style in nsComputedDOMStyle.cpp. r=bz